<resources>
    <string name="app_name">戴维医疗</string>
    <string name="spo2_id" translatable="false">SpO₂</string>
    <string name="pr" translatable="false">PR</string>
    <string name="pi" translatable="false">PI</string>
    <string name="sphb" translatable="false">SpHb</string>
    <string name="spoc" translatable="false">SpOC</string>
    <string name="spmet" translatable="false">SpMet</string>
    <string name="spco" translatable="false">SpCO</string>
    <string name="pvi" translatable="false">PVI</string>
    <string name="apgar" translatable="false">APGAR</string>
    <string name="cpr" translatable="false">CPR</string>
    <string name="ecg_id" translatable="false">ECG</string>
    <string name="hr" translatable="false">HR</string>
    <string name="nibp" translatable="false">NIBP</string>
    <string name="co2" translatable="false">CO₂</string>
    <string name="resp" translatable="false">RESP</string>
    <string name="awrr" translatable="false">AwRR</string>
    <string name="Fi" translatable="false">Fi</string>
    <string name="wake" translatable="false">Wake</string>
    <string name="off">关闭</string>
    <string name="on">开启</string>
    <string name="low">低</string>
    <string name="high">高</string>
    <string name="skin_mode">肤温模式</string>
    <string name="air_mode">箱温模式</string>
    <string name="overheat_mode">超温模式</string>
    <string name="manual_mode">手控模式</string>
    <string name="prewarm_mode">预热模式</string>
    <string name="physiological_alarm">生理报警</string>
    <string name="technical_alarm">技术报警</string>
    <string name="skin">肤温</string>
    <string name="skin2">肤温2</string>
    <string name="air">箱温</string>
    <string name="humidity">湿度</string>
    <string name="oxygen">O₂</string>
    <string name="weight">称重</string>
    <string name="Ambient">环境温湿度</string>
    <string name="angle">摇床角度</string>
    <string name="heater">加热功率</string>
    <string name="weight_unit">体重(g)</string>
    <string name="blue">蓝光</string>
    <string name="mat">床垫</string>
    <string name="demo_setup">演示模式</string>
    <string name="default_user">默认用户</string>
    <string name="overheat_experiment">超温试验</string>
    <string name="alarm_reset">报警复位</string>
    <string name="mute_alarm">声音暂停</string>
    <string name="menu">菜单</string>
    <string name="home">主页</string>
    <string name="lock_screen">锁键</string>
    <string name="NIBP">血压测量</string>
    <string name="camera">视频</string>
    <string name="trend_chart">趋势图</string>
    <string name="trend_table">趋势表</string>
    <string name="freeze">波形冻结</string>
    <string name="print_setup">打印设置</string>
    <string name="screen_choice">界面选择</string>
    <string name="alarm_setup">报警设置</string>
    <string name="start_clock">开始计时</string>
    <string name="auto">自动</string>
    <string name="manual">手动</string>
    <string name="error">失败</string>
    <string name="calibrate_success">校准成功</string>
    <string name="calibrate_failed">校准失败</string>
    <string name="nibp_delay">NIBP等待</string>
    <string name="skin1">肤温1</string>
    <string name="re_weight">重新称重</string>
    <string name="raise_baby">请抱起婴儿...</string>
    <string name="put_down_baby">请放下婴儿...</string>
    <string name="weight_failed">称重失败</string>
    <string name="current_weight">重量</string>
    <string name="lead_off">导联脱落</string>
    <string name="monitor">监护</string>
    <string name="operation">手术</string>
    <string name="diagnostic">诊断</string>
    <string name="standard_interface">标准界面</string>
    <string name="standard_basic_interface">简易界面</string>
    <string name="temp_curve">温度曲线</string>
    <string name="weight_curve">体重曲线</string>
    <string name="body_wave">生理波形</string>
    <string name="breath_interface">呼吸氧合图界面</string>
    <string name="same_screen">7导同屏界面</string>
    <string name="rainbow">Rainbow界面</string>
    <string name="capture_confirm">已添加%s</string>
    <string name="capture_failed">拍照失败</string>
    <string name="no_camera">请连接摄像头！</string>
    <string name="image">图片</string>
    <string name="video">视频</string>
    <string name="all_image">所有图片</string>
    <string name="all_video">所有视频</string>
    <string name="comfort_zone">舒适区</string>
    <string name="sensor_calibration">传感器校准</string>
    <string name="version">版本信息</string>
    <string name="function_setup">功能设置</string>
    <string name="parameter_setup">参数设置</string>
    <string name="quit_demo">退出演示</string>
    <string name="user_setup">用户设置</string>
    <string name="system_setup">系统设置</string>
    <string name="add_patient">添加患者</string>
    <string name="age">年龄(天)</string>
    <string name="gestation">胎龄(周)</string>
    <string name="proposed_setting_range">建议设置区间:</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="calibration_o2_21">氧浓度21%</string>
    <string name="calibration_o2_100">氧浓度100%</string>
    <string name="calibration_confirm_o2_21">请确认是否在21%氧浓度下校准！</string>
    <string name="calibration_confirm_o2_100">请确认是否在100%氧浓度下校准！</string>
    <string name="calibration_weight_0">称重0g</string>
    <string name="calibration_weight_5000">称重5000g</string>
    <string name="calibration_confirm_weight_0">当前称重%sg\n请确认称重是否在0g下校准！</string>
    <string name="calibration_confirm_weight_5000">当前称重%sg\n请确认称重是否在5000g下校准！</string>
    <string name="master_version">主机软件版本</string>
    <string name="slave_version_a">辅助从机A软件版本</string>
    <string name="slave_version_b">辅助从机B软件版本</string>
    <string name="slave_version_c">辅助从机C软件版本</string>
    <string name="slave_version_iso">独立保护从机软件版本</string>
    <string name="alarm_version">报警器板从机软件版本</string>
    <string name="android_version">显示从机软件版本</string>
    <string name="screen_luminance">屏幕亮度(1-5)</string>
    <string name="alarm_volume">报警音量</string>
    <string name="notification_volume">按键音量(1-5)</string>
    <string name="pulse_volume">脉搏音量(1-5)</string>
    <string name="apgar_volume">APGAR音量(1-5)</string>
    <string name="day_mode">日间模式</string>
    <string name="night_mode">夜间模式</string>
    <string name="temp_setting">TEMP设置</string>
    <string name="hum_setting">HUM设置</string>
    <string name="oxygen_setting">O₂设置</string>
    <string name="apgar_setting">APGAR设置</string>
    <string name="blue_setting">BLUE设置</string>
    <string name="mat_setting">MAT设置</string>
    <string name="ecg_setting">ECG设置</string>
    <string name="nibp_setting">NIBP设置</string>
    <string name="spo2_setting">SpO₂设置</string>
    <string name="co2_setting">CO₂设置</string>
    <string name="resp_setting">RESP设置</string>
    <string name="wake_setting">窒息唤醒设置</string>
    <string name="patient_info">患者信息</string>
    <string name="edit_patient">编辑患者</string>
    <string name="patient_list">患者列表</string>
    <string name="delete_patient">删除患者</string>
    <string name="name">姓名</string>
    <string name="id">编号</string>
    <string name="sex">性别</string>
    <string name="blood_type">血型</string>
    <string name="birth_weight">出生体重(g)</string>
    <string name="height">身高(cm)</string>
    <string name="birthday">出生日期</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="pace_maker">起搏器</string>
    <string name="confirm_remove_patient">请确认是否删除患者</string>
    <string name="password">密码</string>
    <string name="date">日期</string>
    <string name="time">时间</string>
    <string name="update_time">确认修改时间后，所有历史数据将被删除！</string>
    <string name="module_setup">模块设置</string>
    <string name="language">语言</string>
    <string name="unit_setup">单位设置</string>
    <string name="overheat_air_above_37">箱温&gt;37</string>
    <string name="overheat_air_below_37">箱温≤37</string>
    <string name="overheat_skin_above_37">肤温&gt;37</string>
    <string name="stable_state">稳定状态</string>
    <string name="deviation_alarm">偏差报警</string>
    <string name="overheat_alarm">超温报警</string>
    <string name="range_setup">范围设置</string>
    <string name="debug_info">调试信息</string>
    <string name="factory_setting">出厂设置</string>
    <string name="module_calibration">模块校准</string>
    <string name="alarm_record">报警日志</string>
    <string name="air_upper_limit">箱温上限</string>
    <string name="air_lower_limit">箱温下限</string>
    <string name="oxygen_upper_limit">氧浓度上限</string>
    <string name="oxygen_lower_limit">氧浓度下限</string>
    <string name="skin_upper_limit">肤温上限</string>
    <string name="skin_lower_limit">肤温下限</string>
    <string name="humidity_upper_limit">湿度上限</string>
    <string name="humidity_lower_limit">湿度下限</string>
    <string name="overheat_airflow_below_37">风道≤37</string>
    <string name="overheat_airflow_above_37">风道&gt;37</string>
    <string name="fan_speed">风机转速</string>
    <string name="iso_air">箱温独立</string>
    <string name="iso_skin1">肤温1独立</string>
    <string name="nibp_calibration">NIBP校准</string>
    <string name="nibp_calibration0">校准0mmHg</string>
    <string name="nibp_calibration140">校准140mmHg</string>
    <string name="reset_lower">重置下位机</string>
    <string name="reset_lower_confirm">是否重置下位机?</string>
    <string name="backup_setup">备份设置</string>
    <string name="backup_setup_confirm">请确认是否进行系统设置备份？</string>
    <string name="restore_setup">恢复设置</string>
    <string name="restore_setup_confirm">请确认是否进行系统设置恢复？</string>
    <string name="pressure">压力计</string>
    <string name="setup">设置</string>
    <string name="mode">模式</string>
    <string name="temp">温度</string>
    <string name="avg_time" translatable="false">AVG Time</string>
    <string name="kang">亲子模式</string>
    <string name="next_page">下一页</string>
    <string name="previous_page">上一页</string>
    <string name="wave_speed">波形速度</string>
    <string name="gain">增益</string>
    <string name="smart_tone">脉搏音</string>
    <string name="sphb_precision">SpHb精度</string>
    <string name="sphb_avm">SpHb动/静脉</string>
    <string name="sphb_average">SpHb平均</string>
    <string name="pvi_average">PVI平均</string>
    <string name="precision_0">精确0.1</string>
    <string name="precision_1">精确0.5</string>
    <string name="precision_2">整数</string>
    <string name="arterial">动脉</string>
    <string name="venous">静脉</string>
    <string name="forever">长</string>
    <string name="middle">中</string>
    <string name="brief">短</string>
    <string name="normal">正常</string>
    <string name="fast">快速</string>
    <string name="hr_source">HR/PR来源</string>
    <string name="lead_3">3导</string>
    <string name="lead_5">5导</string>
    <string name="lead_setting">导联模式</string>
    <string name="filter_mode">滤波模式</string>
    <string name="no_trap">无陷波</string>
    <string name="trap_filter">陷波滤波器</string>
    <string name="pace_check">起搏检测</string>
    <string name="rr_source">RR来源</string>
    <string name="lead_choice">呼吸导联</string>
    <string name="ruler">标尺</string>
    <string name="co2_mode">CO₂工作模式</string>
    <string name="co2_standby">CO₂待机</string>
    <string name="co2_measurement">CO₂测量</string>
    <string name="o2_compensate">O₂补偿</string>
    <string name="n2o_compensate">N₂O补偿</string>
    <string name="chock_delay">窒息延迟</string>
    <string name="co2_calibration">CO₂校零</string>
    <string name="measurement_mode">测量模式</string>
    <string name="initial_sleeve_pressure">初始袖口气压</string>
    <string name="cycle">周期(分钟)</string>
    <string name="self_test">自测</string>
    <string name="vibration_intensity">震动强度</string>
    <string name="data">数据</string>
    <string name="category">类型</string>
    <string name="hours">小时</string>
    <string name="days">天</string>
    <string name="print_content">打印内容</string>
    <string name="print_cycle">打印周期</string>
    <string name="incubator">培养箱</string>
    <string name="spo2">血氧</string>
    <string name="data_print">数据打印</string>
    <string name="spo2_alarm_upper">SpO₂报警上限</string>
    <string name="spo2_alarm_lower">SpO₂报警下限</string>
    <string name="pr_alarm_upper">PR报警上限</string>
    <string name="pr_alarm_lower">PR报警下限</string>
    <string name="pi_alarm_upper">PI报警上限</string>
</resources>